WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194306
AX: com.apple.WebKit.WebContent at WebKit: -[WKAccessibilityWebPageObjectBase axObjectCache]
https://bugs.webkit.org/show_bug.cgi?id=194306
Summary
AX: com.apple.WebKit.WebContent at WebKit: -[WKAccessibilityWebPageObjectBas...
chris fleizach
Reported
2019-02-05 15:01:06 PST
Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Subtype: KERN_INVALID_ADDRESS at 0x0000000000000030 VM Region Info: 0x30 is not in any region. Bytes before following region: 4369039312 REGION TYPE START - END [ VSIZE] PRT/MAX SHRMOD REGION DETAIL UNUSED SPACE AT START ---> __TEXT 00000001046a4000-00000001046a8000 [ 16K] r-x/r-x SM=COW ...it.WebContent Termination Signal: Segmentation fault: 11 Termination Reason: Namespace SIGNAL, Code 0xb Terminating Process: exc handler [3432] Triggered by Thread: 0 Thread 0 name: Dispatch queue: com.apple.main-thread Thread 0 Crashed: 0 WebKit 0x00000001d6cb5ec8 -[WKAccessibilityWebPageObjectBase axObjectCache] + 4 (/BuildRoot/Applications/Xcode.app/Contents/Developer/Toolchains/iOS13.0.xctoolchain/usr/include/c++/v1/memory:2613) 1 WebKit 0x00000001d6cb6000 -[WKAccessibilityWebPageObjectBase accessibilityRootObjectWrapper] + 84 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/WebKit2/WebKit2-7608.1.3.1/WebProcess/WebPage/mac/WKAccessibilityWebPageObjectBase.mm:119) 2
Attachments
patch
(1.57 KB, patch)
2019-02-05 15:35 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(1.57 KB, patch)
2019-02-05 15:49 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2019-02-05 15:01:23 PST
<
rdar://problem/47764549
>
chris fleizach
Comment 2
2019-02-05 15:35:21 PST
Created
attachment 361230
[details]
patch
chris fleizach
Comment 3
2019-02-05 15:49:31 PST
Created
attachment 361234
[details]
patch
WebKit Commit Bot
Comment 4
2019-02-06 18:53:21 PST
Comment on
attachment 361234
[details]
patch Clearing flags on attachment: 361234 Committed
r241112
: <
https://trac.webkit.org/changeset/241112
>
WebKit Commit Bot
Comment 5
2019-02-06 18:53:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug