AX:  com.apple.WebKit.WebContent at WebKit: -[WKAccessibilityWebPageObjectBase axObjectCache] https://bugs.webkit.org/show_bug.cgi?id=194306 <rdar://problem/47764549>

Reviewed by Zalan Bujtas.

Check the page reference is still valid.
Modernize code in this area.

* WebProcess/WebPage/mac/WKAccessibilityWebPageObjectBase.mm:


Canonical link: https://commits.webkit.org/208804@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241112 268f45cc-cd09-0410-ab3c-d52691b4dbfc